Simple temporary fix for dialogs being offscreen

--- a/src/scss/editor/_inspector-dialog.scss
+++ b/src/scss/editor/_inspector-dialog.scss
@@ -5,8 +5,10 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+	max-height: 100%;
 	max-width: 100%;
 	min-width: 200px;
+	overflow: auto;
 	z-index: 1;
 
 	> .wm-inspector-dialog-header {
